--- a/community.html
+++ b/community.html
@@ -56,7 +56,7 @@
         </p>
 
         <h2>Member Blogs</h2>
-        <p><a href="http://akingdomofexiles.wordpress.com/" target="_blank">A Kingdom of Exiles</a> (J.P. Conway)<br />
+        <p><a href="http://jpconway.org/" target="_blank">jpconway.org</a><br />
 
           <h2>Our Partners</h2>
           <p>
@@ -74,19 +74,18 @@
 
             <p>We are proud to lift up these as Acklen Partners:</p>
 
-            <p><a href="http://www.siloamhealth.org/">Siloam Family Health Center</a><br />
-              <a href="http://www.nationsministrycenter.org/">Nations Ministry</a><br />
-              <a href="http://www.rideforreading.org/">Ride for Reading</a><br />
-              <a href="http://www.rmhcnashville.com/">Ronald McDonald House</a><br />
-              <a href="http://opentablenashville.org/">Open Table</a><br />
-              <a href="http://www.luke1412.org/">Luke 14:12</a><br />
-              <a href="http://safehaven.org/">Safe Haven Family Shelter</a><br />
-              <a href="http://www.roomintheinn.org/">Room in the Inn</a><br />
-              <a href="https://www.sths.com/Pages/About-Us/Mission-Integration/Family-Health-Clinics.aspx">St. Thomas Family Health Center South</a><br
-              />
-              <a href="http://www.mhc-tn.org/">Mental Health Cooperative</a><br />
+            <p>
+              <a href="https://www.bridgesfordeafandhh.org/">Bridges for the Deaf and Hard of Hearing</a><br />
+              <a href="https://friendslife.org/">Friends Life Community</a><br />
               <a href="http://archive.tennessean.com/article/DN/20131208/NEWS01/312080071/Lipscomb-students-female-prisoners-share-classes-life-lessons">LIFE Program-TN Prison for Women</a></p>
-
+              <a href="http://www.nationsministrycenter.org/">Nations Ministry</a><br />
+              <a href="http://opentablenashville.org/">Open Table</a><br />
+              <a href="http://www.rmhcnashville.com/">Ronald McDonald House</a><br />
+              <a href="http://www.roomintheinn.org/">Room in the Inn</a><br />
+              <a href="http://safehaven.org/">Safe Haven Family Shelter</a><br />
+              <a href="https://www.sths.com/Pages/About-Us/Mission-Integration/Family-Health-Clinics.aspx">St. Thomas Family Health Center South</a><br/>
+              <a href="http://www.siloamhealth.org/">Siloam Family Health Center</a><br />
+              <a href="https://united4hope.org/">United4Hope</a><br />        
             <h2>Pictures</h2>
             <p> <img class="img-fluid" src="images/community/01.jpg" /><br/><br/>
               <img class="img-fluid" src="images/community/03.jpg" /><br/><br/>
