--- a/community.html
+++ b/community.html
@@ -77,7 +77,7 @@
             <p>
               <a href="https://www.bridgesfordeafandhh.org/">Bridges for the Deaf and Hard of Hearing</a><br />
               <a href="https://friendslife.org/">Friends Life Community</a><br />
-              <a href="http://archive.tennessean.com/article/DN/20131208/NEWS01/312080071/Lipscomb-students-female-prisoners-share-classes-life-lessons">LIFE Program-TN Prison for Women</a></p>
+              <a href="http://archive.tennessean.com/article/DN/20131208/NEWS01/312080071/Lipscomb-students-female-prisoners-share-classes-life-lessons">LIFE Program-TN Prison for Women</a>
               <a href="http://www.nationsministrycenter.org/">Nations Ministry</a><br />
               <a href="http://opentablenashville.org/">Open Table</a><br />
               <a href="http://www.rmhcnashville.com/">Ronald McDonald House</a><br />
@@ -85,7 +85,8 @@
               <a href="http://safehaven.org/">Safe Haven Family Shelter</a><br />
               <a href="https://www.sths.com/Pages/About-Us/Mission-Integration/Family-Health-Clinics.aspx">St. Thomas Family Health Center South</a><br/>
               <a href="http://www.siloamhealth.org/">Siloam Family Health Center</a><br />
-              <a href="https://united4hope.org/">United4Hope</a><br />        
+              <a href="https://united4hope.org/">United4Hope</a><br />
+            </p>        
             <h2>Pictures</h2>
             <p> <img class="img-fluid" src="images/community/01.jpg" /><br/><br/>
               <img class="img-fluid" src="images/community/03.jpg" /><br/><br/>
