Updated Email and Service Description
Changed the email contact to admin@acklen.org

Rolled back the Service Description to our pre-covid description

--- a/location.html
+++ b/location.html
@@ -39,7 +39,7 @@
 </div>
         <br/><br/>
         <h2>Service Times</h2>
-        <h3>DUE TO COVID-19</h3>
+        <!-- <h3>DUE TO COVID-19</h3>
         <p>Please bear with us.  These options change from time to time.</p>
         <p>
         <ul>
@@ -74,10 +74,10 @@
           </li>
         </ul>
         Our Zoom meetings are password protected.  If you would like to join the google groups and
-        receive updates and zoom invites send email to <a href="mailto:900acklenave@gmail.com">here</a>.
+        receive updates and zoom invites send email to <a href="mailto:admin@acklen.org">here</a>.
 
-        </p>
-        <!--  
+        </p> -->
+         
         <h3>Worship</h3>
         <p><strong>Sunday Morning Worship</strong> begins at 9:00 AM and usually lasts about an hour. The service includes prayer,
           Bible readings, songs, a sermon, and the Lord’s Supper. Afterwards, coffee and donuts are served. There is a cry
@@ -116,7 +116,7 @@
         <p>After a brief time of announcements, we share in coffee and donuts.</p>
 
         <p>Some will stay for a class (we offer classes for all ages from 10:20-11:00), and some will head out at this time. Feel free to do what is best for your family.</p>
-        -->
+       
 
       </div>
     </div>
