--- a/community.html
+++ b/community.html
@@ -100,7 +100,10 @@
         <div class="col-lg-1 col-sm-12 d-flex justify-content-end">
                 <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
         </div>
-        <div class="col-lg-5 col-sm-12 d-flex justify-content-end">
+        <div class="col-lg-1 col-sm-12 d-flex justify-content-end">
+	        <a href="https://podcasts.apple.com/us/podcast/900-acklen-ave/id1475435375" target="_blank"><img src="images/podcast.svg" alt="900 Acklen Ave Podcast" width="32" height="32" border="0" class="icon_pad" /></a>
+	      </div>
+      <div class="col-lg-4 col-sm-12 d-flex justify-content-end">
           © 2020 Acklen Avenue Church of Christ<br/>
         </div>
         <div class="col-lg-5 col-sm-12 d-flex justify-content-end">
