--- a/songbook/index.html
+++ b/songbook/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acklen Hymnal Index</title>
     <link href="songbook.css" rel="stylesheet" type="text/css" media="screen">
-    <link href="http://ajax.aspnetcdn.com/ajax/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/bootstrap/3.3.4/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
+    <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.4/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
   </head>
   <body>
     <div class="container">
@@ -42,7 +42,7 @@
         {
           "number": 1,
           "title": "All Life Comes from Thee",
-          "link": "http://kleinwood.com/annual-singing/2013/08/02/all-life-comes-from-thee"
+          "link": "https://kleinwood.com/annual-singing/2013/08/02/all-life-comes-from-thee"
         },
         {
           "number": 2,
@@ -72,7 +72,7 @@
         {
           "number": 7,
           "title": "As the Deer (Nystrom)",
-          "link": "http://kleinwood.com/annual-singing/2008/08/01/as-the-deer"
+          "link": "https://kleinwood.com/annual-singing/2008/08/01/as-the-deer"
         },
         {
           "number": 8,
@@ -112,7 +112,7 @@
         {
           "number": 15,
           "title": "Come, King of Kings",
-          "link": "http://kleinwood.com/annual-singing/2004/08/06/come-king-of-kings"
+          "link": "https://kleinwood.com/annual-singing/2004/08/06/come-king-of-kings"
         },
         {
           "number": 16,
@@ -147,7 +147,7 @@
         {
           "number": 22,
           "title": "Faithful Love",
-          "link": "http://kleinwood.com/annual-singing/2013/08/02/faithful-love"
+          "link": "https://kleinwood.com/annual-singing/2013/08/02/faithful-love"
         },
         {
           "number": 23,
@@ -192,7 +192,7 @@
         {
           "number": 31,
           "title": "Hear O Israel",
-          "link": "http://kleinwood.com/annual-singing/2013/08/02/hear-o-israel"
+          "link": "https://kleinwood.com/annual-singing/2013/08/02/hear-o-israel"
         },
         {
           "number": 32,
@@ -207,7 +207,7 @@
         {
           "number": 34,
           "title": "Highest Place",
-          "link": "http://kleinwood.com/annual-singing/2011/08/05/highest-place"
+          "link": "https://kleinwood.com/annual-singing/2011/08/05/highest-place"
         },
         {
           "number": 35,
@@ -232,7 +232,7 @@
         {
           "number": 39,
           "title": "Holy to the Lord",
-          "link": "http://kleinwood.com/annual-singing/2008/08/01/holy-to-the-lord"
+          "link": "https://kleinwood.com/annual-singing/2008/08/01/holy-to-the-lord"
         },
         {
           "number": 40,
@@ -262,7 +262,7 @@
         {
           "number": 45,
           "title": "In Moments Like These",
-          "link": "http://newtestamentchurch.org/friends/music/McCoy/MC2002-11.mp3"
+          "link": "https://newtestamentchurch.org/friends/music/McCoy/MC2002-11.mp3"
         },
         {
           "number": 46,
@@ -322,7 +322,7 @@
         {
           "number": 57,
           "title": "My Only Hope Is You",
-          "link": "http://kleinwood.com/annual-singing/2012/08/03/my-only-hope-is-you"
+          "link": "https://kleinwood.com/annual-singing/2012/08/03/my-only-hope-is-you"
         },
         {
           "number": 58,
@@ -352,7 +352,7 @@
         {
           "number": 63,
           "title": "Sanctuary",
-          "link": "http://kleinwood.com/annual-singing/2007/08/03/sanctuary"
+          "link": "https://kleinwood.com/annual-singing/2007/08/03/sanctuary"
         },
         {
           "number": 64,
